--- a/index.html
+++ b/index.html
@@ -9,19 +9,11 @@
 
 <body>
   <header>
-    <h1>Randomizer</h1>
+    <h1>Buss Mall (it's a mall, in a bus!!!)</h1>
   </header>
   <main>
-    <section>
-      <header>Select your favorite Item from the 3 pictures bellow:</header>
-
-      
-      <!-- <figure>
-        <img id="image" src="" />
-        <figcaption id="caption"></figcaption>
-      </figure>
-      -->
-
+    <header>Select your favorite Item from the 3 pictures bellow:</header>
+    <section id="image-container">
     </section>
   </main>
   <footer>
@@ -33,6 +25,7 @@
   </footer>
 
   <script src="script.js"></script>
+  <!-- <script src="johnscript.js"></script> -->
 </body>
 
 </html>
