chart up and running

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <section id="image-container">
     </section>
   </main>
+  <canvas id="myChart" width="400" height="400">
+
+  </canvas>
   <footer>
     &copy; 2019 Enrique
 
@@ -24,7 +27,9 @@
     </div> -->
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="script.js"></script>
+
   <!-- <script src="johnscript.js"></script> -->
 </body>
 
